--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img class ="dice-images" id="second-image" src = "Images/DIce-1.png" alt = "2">
         </div>
         <h1 class="winner">Roll to Play</h1>
-        <button onclick="playAgain()" class="refresh">Roll Again</button>
+        <button onclick="playAgain()" class="refresh">Roll</button>
         <script src="js/myscript.js"></script>
     </body>
 
