--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1 class = "heading">Virtual Dice</h1>
         <div class="players-names">
             <ul>
-                <li class="player-name">Player - 1</li>
-                <li class="player-name">Player - 2</li>
+                <li class="player-name"><input class="text-box"type="text" value="Enter Name" onclick="disappear(0)"></li>
+                <li class="player-name"><input class="text-box"type="text" value="Enter Name" onclick="disappear(1)"></li>
             </ul>
         </div>
         <div class ="dice-images">
