--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel ="stylesheet" href="styles.css">
         <title>Virtual Dice</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@300&family=Sacramento&family=Shippori+Antique&display=swap" rel="stylesheet">
